# chatbot_llama_index

./: .gitignore  README.md  pyproject.toml
chatbot_llama_index/: chroma_core.py  chroma_generate.py  main.py  settings.py  weaviate_core.py  weaviate_generate.py
docker/weaviate/: docker-compose.yml
